--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@
 authApp
 brokerApp
 loggerApp
+reservationApp
+frontendApp
 
 # env
 .env
+
+# VS Code settings and workspace files
+.vscode/
+*.code-workspace
