--- a/project/Makefile
+++ b/project/Makefile
@@ -1,6 +1,7 @@
 BROKER_BINARY=brokerApp
 AUTH_BINARY=authApp
 LOGGER_BINARY=loggerApp
+RESERVATION_BINARY=reservationApp
 
 ## up: starts all containers in the background without forcing build
 up:
@@ -9,7 +10,7 @@ up:
 	@echo "Docker images started!"
 
 ## up_build: stops docker-compose (if running), builds all projects and starts docker compose
-up_build: build_broker build_auth build_logger
+up_build: build_broker build_auth build_logger build_reservation
 	@echo "Stopping docker images (if running...)"
 	docker-compose down
 	@echo "Building (when required) and starting docker images..."
@@ -38,4 +39,10 @@ build_auth:
 build_logger:
 	@echo "Building logger binary..."
 	cd ../logger-svc && env GOOS=linux CGO_ENABLED=0 go build -o ${LOGGER_BINARY} ./cmd/api
+	@echo "Done!"
+
+## build_reservation: builds the reservation binary as a linux executable
+build_reservation:
+	@echo "Building reservation binary..."
+	cd ../reservation-svc && env GOOS=linux CGO_ENABLED=0 go build -o ${RESERVATION_BINARY} ./cmd/api
 	@echo "Done!"
