--- a/project/docker-compose.yaml
+++ b/project/docker-compose.yaml
@@ -25,17 +25,35 @@ services:
       mode: replicated
       replicas: 1
     environment:
-      DSN: "host=postgres port=5432 user=postgres password=password dbname=users sslmode=disable timezone=UTC connect_timeout=5"
+      DSN: "host=postgres port=5432 user=postgres password=password dbname=booking_system sslmode=disable timezone=UTC connect_timeout=5"
+  
+  reservation-svc:
+    build:
+      context: ./../reservation-svc
+      dockerfile: ./../reservation-svc/reservation-svc.dockerfile
+    restart: always
+    ports:
+      - 5002:5002
+    deploy:
+      mode: replicated
+      replicas: 1
+    environment:
+      DSN: "host=postgres port=5432 user=postgres password=password dbname=booking_system sslmode=disable timezone=UTC connect_timeout=5"
+      MAX_ACCEPT_ERROR: 10
 
   logger-svc:
     build:
       context: ./../logger-svc
       dockerfile: ./../logger-svc/logger-svc.dockerfile
     restart: always
+    ports:
+      - 5001:5001
     deploy:
       mode: replicated
       replicas: 1
-
+    environment:
+      MAX_ACCEPT_ERROR: 10
+      
   postgres:
     image: 'postgres:latest'
     ports:
